--- a/scss/stages.scss
+++ b/scss/stages.scss
@@ -15,6 +15,7 @@
             text-align: start;
         }
         p {
+            line-height: 150%;
             &:not(:last-child) {
                 margin-bottom: 20px;
             }
