--- a/css/accordion.css
+++ b/css/accordion.css
@@ -2,7 +2,10 @@
 .accordion__block {
   margin-bottom: 16px;
   background-color: var(--color-white);
-  border-radius: 24px;
+  border-bottom: 1px solid #EEEEEE;
+}
+.accordion__block:first-child {
+  border-top: 1px solid #EEEEEE;
 }
 .accordion__summary {
   list-style: none;
@@ -18,45 +21,19 @@
   justify-content: space-between;
   align-items: center;
   gap: 10px;
-  padding: 24px;
-  border-radius: 24px;
+  padding: 24px 24px 24px 0px;
+  transition: all 0.5s;
 }
-.accordion__summary span {
-  width: 36px;
-  height: 36px;
-  background-color: inherit;
-  border: 1px solid var(--color-black);
-  display: block;
-  border-radius: 50%;
-  position: relative;
-  transition: transform 0.2s ease-out;
-  flex: none;
+.accordion__summary img {
+  transition: all 0.3s;
 }
-.accordion__summary span::after, .accordion__summary span::before {
-  position: absolute;
-  content: "";
-  width: 15px;
-  height: 2px;
-  top: 50%;
-  background-color: var(--color-black);
-  transition: transform 0.2s ease-out;
+.accordion__details[open] img {
+  transform: rotate(45deg);
+  transition: all 0.3s;
 }
-.accordion__summary span::after {
-  left: 10px;
-}
-.accordion__summary span::before {
-  left: 10px;
-  transform: rotate(90deg);
-}
-.accordion__details[open] .accordion__summary span {
-  border: 1px solid var(--color-secondary);
-}
-.accordion__details[open] .accordion__summary span::after {
-  background-color: var(--color-secondary);
-}
-.accordion__details[open] .accordion__summary span::before {
-  transform: rotate(0deg);
-  background-color: var(--color-secondary);
+.accordion__details[open] .accordion__title {
+  font-weight: 700;
+  transition: all 0.5s;
 }
 .accordion__content {
   display: grid;
@@ -65,14 +42,10 @@
   background-color: var(--color-white);
   opacity: 0;
   padding-right: 20px;
-  padding: 0px 24px;
-  border-bottom-right-radius: 24px;
-  border-bottom-left-radius: 24px;
+  padding: 0px 24px 0px 0px;
 }
 .accordion__content_body {
   overflow: hidden;
-  font-weight: 600;
-  font-family: var(--font-family-m);
   line-height: 140%;
 }
 .accordion__details[open] + .accordion__content {
