--- a/css/expertise.css
+++ b/css/expertise.css
@@ -5,7 +5,7 @@
   gap: 40px 10px;
   position: relative;
 }
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   .expertise__body {
     flex-wrap: wrap;
     padding-top: 100px;
@@ -18,7 +18,7 @@
   margin-bottom: 40px;
   text-align: start;
 }
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   .expertise__info h2 {
     position: absolute;
     top: 0;
@@ -26,6 +26,7 @@
 }
 .expertise__info p {
   margin-bottom: 40px;
+  line-height: 150%;
 }
 @media (max-width: 768px) {
   .expertise__info p {
@@ -35,7 +36,7 @@
 .expertise__info .button {
   max-width: 340px;
 }
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   .expertise__info {
     order: 1;
   }
