--- a/css/form.css
+++ b/css/form.css
@@ -4,6 +4,9 @@
   max-width: 376px;
   border: 1px solid #D7DEE8;
   border-radius: var(--border-radius-small);
+  background-color: var(--color-white);
+  position: sticky;
+  top: 170px;
 }
 .form h4 {
   font-weight: 700;
@@ -36,6 +39,11 @@
 }
 .form__link {
   display: inline;
+}
+@media (max-width: 768px) {
+  .form {
+    padding: 20px 25px;
+  }
 }
 
 .checkbox {
