--- a/css/globals.css
+++ b/css/globals.css
@@ -1,10 +1,6 @@
 /*----------------------------------global--------------------------------*/
-body.lock {
-  overflow: hidden;
-}
-
 html {
-  scroll-padding-top: 150px;
+  scroll-padding-top: 100px;
 }
 
 body {
@@ -29,7 +25,6 @@ h2 {
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  overflow: hidden;
 }
 
 .main {
@@ -61,29 +56,6 @@ section {
   top: 0;
   left: 0;
   object-fit: cover;
-}
-
-.title {
-  font-size: clamp(26px, 3.0555555556vw, 44px);
-  line-height: 140%;
-  color: var(--color-black);
-  margin-bottom: 32px;
-}
-.title--mod {
-  color: var(--color-white);
-  margin-bottom: 24px;
-}
-
-.subtitle {
-  font-size: clamp(24px, 2.7777777778vw, 40px);
-  line-height: 140%;
-  color: var(--color-white);
-}
-
-.text {
-  font-size: clamp(14px, 1.25vw, 18px);
-  color: var(--color-black);
-  line-height: 100%;
 }
 
 .button {
@@ -183,6 +155,27 @@ section {
 }
 .block-images__img:first-child {
   grid-row: 1/3;
+}
+@media (max-width: 768px) {
+  .block-images__img:first-child {
+    height: 270px;
+  }
+}
+.block-images__img:nth-child(2) {
+  height: 200px;
+}
+@media (max-width: 768px) {
+  .block-images__img:nth-child(2) {
+    height: 100px;
+  }
+}
+.block-images__img:nth-child(3) {
+  height: 430px;
+}
+@media (max-width: 768px) {
+  .block-images__img:nth-child(3) {
+    height: 147px;
+  }
 }
 @media (max-width: 992px) {
   .block-images {
