--- a/css/prices.css
+++ b/css/prices.css
@@ -1,6 +1,7 @@
 /*----------------------------------prices-------------------------------*/
 .prices__content p {
   margin-bottom: 40px;
+  line-height: 150%;
 }
 .prices__table {
   width: 100%;
