--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -1,10 +1,7 @@
 /*----------------------------------global--------------------------------*/
 @use 'mixins' as *;
-body.lock {
-    overflow: hidden;
-}
 html {
-    scroll-padding-top: 150px;
+    scroll-padding-top: 100px;
 }
 body { 
     font-family: var(--font-base); 
@@ -26,7 +23,6 @@ h2 {
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    overflow: hidden;
 }
 .main {
     flex: 1 1 auto;
@@ -52,26 +48,6 @@ section {
         left: 0;
         object-fit: cover;
     }
-}
-.title {
-    @include fluid-text(26, 44);
-    line-height: 140%;
-    color: var(--color-black);
-    margin-bottom: 32px;
-    &--mod {
-        color: var(--color-white);
-        margin-bottom: 24px;
-    }
-}
-.subtitle {
-    @include fluid-text(24, 40);
-    line-height: 140%;
-    color: var(--color-white);
-}
-.text {
-    @include fluid-text(14, 18);
-    color: var(--color-black);
-    line-height: 100%;
 }
 .button {
     display: flex;
@@ -160,6 +136,21 @@ section {
         }
         &:first-child {
             grid-row: 1 / 3;
+            @include mobile {
+                height: 270px;
+            }
+        }
+        &:nth-child(2) {
+            height: 200px;
+            @include mobile {
+                height: 100px;
+            }
+        }
+        &:nth-child(3) {
+            height: 430px;
+            @include mobile {
+                height: 147px;
+            }
         }
     }
     @include table {
