--- a/scss/tabs.scss
+++ b/scss/tabs.scss
@@ -8,68 +8,79 @@
   .tab-labels {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 48px;
-    gap: 16px;
-    @include mobile {
-      flex-wrap: wrap;
-    }
-    &__inner {
-      display: flex;
-      align-items: center;
-      gap: 15px 30px;
-    }
-    &__yandex {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 5px;
-      background-color: var(--color-white);
-      border-radius: var(--border-radius-small);
-      padding: 8px 24px 8px 8px;
-      &_info {
-        p {
-          margin-bottom: 10px;
-        }
-        @include mobile {
-          p {
-            margin-bottom: 0px;
-            margin-right: 5px;
-          }
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-        }
-      }
-      @include mobile {
-        &>img {
-          width: 24px;
-        }
-      }
+    padding-bottom: 40px;
+    gap: 20px;
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden; 
+    scrollbar-width: none; 
+    &::-webkit-scrollbar {
+        display: none;
     }
   }
   .tab-label {
     cursor: pointer;
-    color: #D6D6D6;
-    font-weight: 700;
-    @include fluid-text(24, 40);
-    line-height: 120%;
+    @include fluid-text(16, 18);
+    line-height: 150%;
+    background-color: var(--color-white);
+    box-shadow: var(--box-shadow);
+    padding: 6px 16px;
+    border-radius: 6px;
   }
   .tab-content {
     display: none;
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden; 
+    scrollbar-width: none;
+    .table tbody td {
+      text-align: left;
+      border-bottom: 1px solid #EEEEEE;
+      &:nth-child(2) {
+          font-weight: 400;
+      }
+      &:last-child {
+          font-weight: 700;
+          white-space: nowrap;
+      }
+    }
+    .table {
+      @include mobile {
+          width: 1000px;
+          border-collapse: separate;
+      }
   }
-  .tab-content .easy__info {
-    flex-basis: 1280px;
-  }
-  .tab-content .easy__image {
-    flex-basis: 600px;
   }
   #tab-1:checked ~ .content-1,
-  #tab-2:checked ~ .content-2 {
+  #tab-2:checked ~ .content-2,
+  #tab-3:checked ~ .content-3,
+  #tab-4:checked ~ .content-4,
+  #tab-5:checked ~ .content-5,
+  #tab-6:checked ~ .content-6,
+  #tab-7:checked ~ .content-7,
+  #tab-8:checked ~ .content-8,
+  #tab-9:checked ~ .content-9,
+  #tab-10:checked ~ .content-10,
+  #tab-11:checked ~ .content-11,
+  #tab-12:checked ~ .content-12,
+  #tab-13:checked ~ .content-13  {
     display: block;
   }
   #tab-1:checked ~ .tab-labels label[for="tab-1"],
-  #tab-2:checked ~ .tab-labels label[for="tab-2"] {
-    color: var(--color-black-text);
+  #tab-2:checked ~ .tab-labels label[for="tab-2"],
+  #tab-3:checked ~ .tab-labels label[for="tab-3"],
+  #tab-4:checked ~ .tab-labels label[for="tab-4"],
+  #tab-5:checked ~ .tab-labels label[for="tab-5"],
+  #tab-6:checked ~ .tab-labels label[for="tab-6"],
+  #tab-7:checked ~ .tab-labels label[for="tab-7"],
+  #tab-8:checked ~ .tab-labels label[for="tab-8"],
+  #tab-9:checked ~ .tab-labels label[for="tab-9"],
+  #tab-10:checked ~ .tab-labels label[for="tab-10"],
+  #tab-11:checked ~ .tab-labels label[for="tab-11"],
+  #tab-12:checked ~ .tab-labels label[for="tab-12"],
+  #tab-13:checked ~ .tab-labels label[for="tab-13"] {
+    color: var(--color-white);
+    background-color: var(--color-primary);
   }
   input[type="radio"] {
     display: none;
