--- a/scss/theory.scss
+++ b/scss/theory.scss
@@ -5,11 +5,13 @@
         display: flex;
         justify-content: space-between;
         gap: 10px;
+        @include mobile {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
     }
     &__info {
         flex-basis: 954px;
-        flex: 1;
-        min-height: 200vh;
         h2 {
             text-align: start;
         }
@@ -18,6 +20,7 @@
         }
         p {
             margin-bottom: 40px;
+            line-height: 150%;
         }
         h3 {
             font-weight: 700;
@@ -42,7 +45,13 @@
         p {
             margin-bottom: 0px;
         }
+        @include mobile {
+            flex-wrap: wrap;
+            padding: 20px;
+        }
+    }
+    &__form {
+        position: relative; 
     }
 }
-
 /*----------------------------------menu--------------------------------*/
