--- a/css/main-section.css
+++ b/css/main-section.css
@@ -13,26 +13,26 @@
     margin-top: 70px;
   }
 }
-.main-section__content {
+.main-section__wrap {
   position: relative;
-  max-width: 1530px;
-  margin: auto;
-  padding: 0px 60px 30px 60px;
-}
-@media (max-width: 992px) {
-  .main-section__content {
-    padding: 0px 20px 60px 20px;
-  }
 }
 .main-section__body {
   position: relative;
   z-index: 2;
   display: flex;
   justify-content: space-between;
+  padding: 0px 30px 40px 30px;
 }
 @media (max-width: 992px) {
   .main-section__body {
     flex-wrap: wrap;
+    justify-content: center;
+    padding: 0px 20px 40px 20px;
+  }
+}
+@media (max-width: 768px) {
+  .main-section__body {
+    padding: 20px;
   }
 }
 .main-section__info {
@@ -61,9 +61,9 @@
 .main-section__info h1 {
   font-weight: 700;
   font-size: clamp(24px, 3.0555555556vw, 44px);
-  line-height: 160%;
+  line-height: 120%;
   text-transform: uppercase;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 @media (max-width: 768px) {
   .main-section__info h1 {
@@ -71,10 +71,10 @@
   }
 }
 .main-section__blocks {
-  margin-bottom: 60px;
+  margin-bottom: 50px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 30px;
+  gap: 20px;
 }
 .main-section__blocks p {
   padding-left: 50px;
@@ -90,10 +90,15 @@
   left: 0;
   background-color: var(--color-secondary);
 }
+@media (max-width: 768px) {
+  .main-section__blocks {
+    margin-bottom: 20px;
+  }
+}
 .main-section__photo {
-  flex-basis: 690px;
+  flex-basis: 600px;
   width: 100%;
-  margin-top: -100px;
+  margin-top: -50px;
 }
 @media (max-width: 992px) {
   .main-section__photo {
@@ -109,12 +114,7 @@
   left: 0;
 }
 .main-section__bg img {
-  border-radius: var(--border-radius);
-}
-@media (max-width: 992px) {
-  .main-section__bg img {
-    border-radius: var(--border-radius-medium);
-  }
+  border-radius: 40px;
 }
 
 /*----------------------------------main-section--------------------------------*/
