--- a/css/search.css
+++ b/css/search.css
@@ -4,9 +4,20 @@
 }
 .search__label_input {
   background-color: inherit;
+  border: none;
+  border-bottom: 1px solid transparent;
+  outline: none;
+  padding-bottom: 5px;
+  transition: border-bottom 0.3s ease;
 }
 .search__label_input::placeholder {
   color: var(--color-black);
+}
+.search__label_input:focus {
+  border-bottom: 1px solid var(--color-black);
+}
+.search__label_input:active {
+  border-bottom: 1px solid var(--color-black);
 }
 .search__label {
   display: flex;
@@ -14,6 +25,17 @@
   justify-content: space-between;
   gap: 10px;
   font-size: 16px;
+  cursor: pointer;
+}
+.search__label img {
+  margin-right: 10px;
+  transition: all 0.3s;
+}
+@media (hover: hover) {
+  .search__label:hover img {
+    transform: scale(1.5);
+    transition: all 0.3s;
+  }
 }
 @media (max-width: 992px) {
   .search {
