--- a/scss/main-section.scss
+++ b/scss/main-section.scss
@@ -9,22 +9,22 @@
     @include mobile {
         margin-top: 70px;
     }
-    &__content {
+    &__wrap {
         position: relative;
-        max-width: 1530px;
-        margin: auto;
-        padding: 0px 60px 30px 60px;
-        @include table {
-            padding: 0px 20px 60px 20px;
-        }
     }
     &__body {
         position: relative;
         z-index: 2;
         display: flex;
         justify-content: space-between;
+        padding: 0px 30px 40px 30px;
         @include table {
             flex-wrap: wrap;
+            justify-content: center;
+            padding: 0px 20px 40px 20px;
+        }
+        @include mobile {
+            padding: 20px;
         }
     }
     &__info {
@@ -48,19 +48,19 @@
         h1 {
             font-weight: 700;
             @include fluid-text(24, 44);
-            line-height: 160%;
+            line-height: 120%;
             text-transform: uppercase;
-            margin-bottom: 40px;
+            margin-bottom: 20px;
             @include mobile {
                 margin-bottom: 24px;
             }
         }
     }
     &__blocks {
-        margin-bottom: 60px;
+        margin-bottom: 50px;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 30px;
+        gap: 20px;
         p {
             padding-left: 50px;
             position: relative;
@@ -75,11 +75,14 @@
                 background-color: var(--color-secondary);
             }
         }
+        @include mobile {
+            margin-bottom: 20px;
+        }
     }
     &__photo {
-        flex-basis: 690px;
+        flex-basis: 600px;
         width: 100%;
-        margin-top: -100px;
+        margin-top: -50px;
         @include table {
             margin-top: 0px;
             order: -1;
@@ -92,13 +95,8 @@
         top: 0;
         left: 0;
         img {
-            border-radius: var(--border-radius);
-            @include table {
-                border-radius: var(--border-radius-medium);
-            }
+            border-radius: 40px;
         }
     }
 }
-
-
 /*----------------------------------main-section--------------------------------*/
