--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -1,6 +1,7 @@
 /*----------------------------------navigation--------------------------------*/
 @use 'mixins' as *;
 .navigation {
+    padding: 0px 20px;
     h3 {
         font-family: var(--font-unbounded);
         margin-bottom: 20px;
