--- a/scss/search.scss
+++ b/scss/search.scss
@@ -7,6 +7,17 @@
         &::placeholder {
             color: var(--color-black);
         }
+        border: none; 
+        border-bottom: 1px solid transparent; 
+        outline: none; 
+        padding-bottom: 5px;
+        transition: border-bottom 0.3s ease; 
+        &:focus {
+            border-bottom: 1px solid var(--color-black); 
+          }
+        &:active {
+            border-bottom: 1px solid var(--color-black);
+        }
     }
     &__label {
         display: flex;
@@ -14,6 +25,17 @@
         justify-content: space-between;
         gap: 10px;
         font-size: 16px;
+        cursor: pointer;
+        img {
+            margin-right: 10px;
+            transition: all 0.3s;
+        }
+        @include hover {
+            img {
+                transform: scale(1.5);
+                transition: all 0.3s;
+            }
+        }
     }
     @include table {
         display: none;
